[API][Users] get endpoint
