# config/routes.php
@@ -1,6 +1,7 @@
 <?php
 
 use Yumerov\CredowebBackendTask\Controller\HospitalController;
+use Yumerov\CredowebBackendTask\Controller\UserController;
 
 return [
     ['GET', '/api/hospitals', [HospitalController::class, 'list']],
@@ -8,4 +9,6 @@ return [
     ['POST', '/api/hospitals', [HospitalController::class, 'create']],
     ['PUT', '/api/hospitals/{id}', [HospitalController::class, 'update']],
     ['DELETE', '/api/hospitals/{id}', [HospitalController::class, 'delete']],
+
+    ['GET', '/api/users/{id}', [UserController::class, 'read']],
 ];
